--- a/yssl/res/values/strings.xml
+++ b/yssl/res/values/strings.xml
@@ -7,4 +7,9 @@
     <!-- guide -->
     <string name="start">立即进入</string>
 
+    <!-- main -->
+    <string name="main_index">首页</string>
+    <string name="main_publish">掌厨</string>
+    <string name="main_collect">收藏</string>
+    <string name="main_personal">个人</string>
 </resources>
