--- a/yssl/res/values/strings.xml
+++ b/yssl/res/values/strings.xml
@@ -17,6 +17,8 @@
     <!-- Personal -->
     <string name="mine_publish">我的发表</string>
     <string name="night_mode">夜间模式</string>
+    <string name="translucent_status_tips">只支持4.4以上系统</string>
+    <string name="translucent_status">透明状态栏</string>
     <string name="feed_back">意见反馈</string>
     <string name="about_our">关于我们</string>
     <string name="setting">设　　置</string>
