--- a/yssl/res/values/strings.xml
+++ b/yssl/res/values/strings.xml
@@ -4,6 +4,8 @@
     
     <string name="click_again">再按一次退出程序...</string>
     <string name="net_data_error">不好意思，阿汤哥被外星人接走了</string>
+    <string name="data_newest">已经是最新数据了</string>
+    <string name="data_no_more">没有更多数据了</string>
     
     <!-- guide -->
     <string name="start">立即进入</string>
