--- a/yssl/res/values/strings.xml
+++ b/yssl/res/values/strings.xml
@@ -29,4 +29,10 @@
     <!-- Collect -->
     <string name="item_top">置顶</string>
     <string name="item_delete">删除</string>
+    
+    <!-- setting -->
+    <string name="unwifi_download">非Wi-Fi网络不下载图片</string>
+    <string name="clear_cache">手动清理缓存</string>
+    <string name="check_update">检查更新</string>
+    <string name="score_atangge">为阿汤哥评分</string>
 </resources>
